Fix clock on mobile

--- a/styles/TimePicker.css
+++ b/styles/TimePicker.css
@@ -44,7 +44,7 @@
   width: 12rem;
   height: 12rem !important;
   max-width: 100vw;
-  padding: 0.5rem;
+  padding: 1rem;
   background-color: unset;
   border: 0;
   z-index: 1;
